# sql_agent

./: .env  .env.example  .gitignore  README.md  api_server.py  exceptions.py  main.py  pyproject.toml  start.sh
agent/: base_agent.py  prompts.py  tools.py
config/: logging.py  settings.py
data/: chinook_zh.py  few_shot_examples.json
data/chromadb_store/: chroma.sqlite3
db/: engine.py  executor.py  models.py  schema_extractor.py  session_store.py
docs/: optimization_list.md
frontend/: package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/components/: AuthView.vue  ChatInterface.vue  ChatMessage.vue  Sidebar.vue
models/: api.py  auth.py  schemas.py
rag/: extractor.py  indexer.py  retriever.py
scripts/: build_rag_index.py  check_data.py  clean_db.py  init_auth_db.py  setup_database.py  test_agent.py  test_core_tools.py  test_prompt_construction.py  test_rag.py  test_sql_safety.py
security/: auth.py  sql_validator.py
tools/: core_functions.py  db_tools.py
